# project-templates

./: CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Taskfile.yml  flake.nix  project-templates.cabal
app/: Main.hs
examples/haskell-flake/: config.yaml
examples/haskell-flake/{{project-name}}/: flake.nix
examples/uv-devenv/: config.yaml
examples/uv-devenv/{{ project-name }}/: devenv.nix  devenv.yaml
src/ProjectTemplates/: Run.hs
src/ProjectTemplates/App/: App.hs  Cli.hs  Config.hs  Env.hs  Errors.hs  Files.hs  Hooks.hs  Process.hs  State.hs  Variables.hs
src/ProjectTemplates/Templates/: Config.hs  Processor.hs  Transforms.hs
tests/: ConfigSpec.hs  HooksSpec.hs  Main.hs  ProcessSpec.hs  TemplateErrorSpec.hs  TemplatesSpec.hs  TestUtils.hs  TransformsSpec.hs  VariablesSpec.hs
